syntax = "proto3";

package pb;

option go_package = "./pb";

message OperationParams {
    int32 number1 = 1;
    int32 number2 = 2;
}

message Answer {
    int32 result = 1;
}
